--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,35 @@
+/* initialize ----------*/
+
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+header, main, nav, aside, footer {
+  width: 100%;
+  box-sizing: border-box;
+}
+
 body {
-    text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  background-color: #D1D1C7;
+  line-height: 1.6;
+  color: black;
+  font-size: 1.2em;
+  padding: 0 10px
+}
+
+.wrapper {
+  margin: 0 auto;
+  width: 510px;
+  padding-top: 50px;
+  text-align: left;
 }
