--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,14 @@ header, main, nav, aside, footer {
   box-sizing: border-box;
 }
 
+/* http://pheist.net/fonts.php?id=51 */
+@font-face {
+    font-family: 'Fipps';
+    src: url('../fonts/Fipps-Regular.otf');
+}
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Fipps, Arial, Helvetica, sans-serif;
   text-align: center;
   background-color: #D1D1C7;
   line-height: 1.6;
@@ -32,4 +38,10 @@ body {
   width: 510px;
   padding-top: 50px;
   text-align: left;
+}
+
+.instructions {
+  padding-top: 15px;
+  font-size: 0.8em;
+  text-align: center;
 }
